# Engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  m0-validation.yml
apps/: CMakeLists.txt
apps/arpg-client/: CMakeLists.txt  README.md  main.cpp
arpg-gameplay/: CMakeLists.txt
arpg-gameplay/include/arpg/gameplay/: module_info.hpp
arpg-gameplay/src/: module_info.cpp
assets-compiled/: README.md
assets-source/: README.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ProjectOptions.cmake  ValidateTargetGraph.cmake  ValidateToolchain.cmake
core-engine/: CMakeLists.txt
core-engine/include/arpg/core/: assert.hpp  build_info.hpp
core-engine/include/arpg/diagnostics/: timing_metrics.hpp
core-engine/include/arpg/ecs/: component_type_id.hpp  entity.hpp  registry.hpp
core-engine/include/arpg/input/: input_buffer.hpp
core-engine/include/arpg/logging/: console_sink.hpp  logger.hpp
core-engine/include/arpg/memory/: allocation.hpp  fixed_block_pool.hpp  linear_arena.hpp
core-engine/include/arpg/memory/detail/: checked_arithmetic.hpp
core-engine/include/arpg/platform/: desktop_platform.hpp  platform.hpp
core-engine/include/arpg/platform/detail/: glfw_error_latch.hpp
core-engine/include/arpg/runtime/: fixed_step.hpp  runtime_loop.hpp
core-engine/include/arpg/time/: monotonic_clock.hpp
core-engine/src/core/: assert.cpp  build_info.cpp
core-engine/src/diagnostics/: timing_metrics.cpp
core-engine/src/ecs/: registry.cpp
core-engine/src/input/: input_buffer.cpp
core-engine/src/logging/: console_sink.cpp  logger.cpp
core-engine/src/memory/: fixed_block_pool.cpp  linear_arena.cpp
core-engine/src/platform/: glfw_error_latch.cpp  glfw_platform.cpp
core-engine/src/runtime/: fixed_step.cpp  runtime_loop.cpp
core-engine/src/time/: monotonic_clock.cpp
dev-tools/: CMakeLists.txt
dev-tools/include/arpg/tools/: module_info.hpp
dev-tools/src/: module_info.cpp
docs/: Architecture_Decisions.md  CHANGELOG.md  CONTRIBUTING.md  ENGINE_BIBLE.md  INDEPENDENT_TECHNICAL_REVIEW_BOARD.md  M0_Validation.md  M1_Validation.md  M2_Validation.md  M3_Validation.md  Master_Implementation_Specification.md  PROJECT_RULES.md  PROJECT_STATUS.md  Pre_Implementation_Audit.md  README.md  ROADMAP.md
docs/ADR/: ADR-0001-Canonical-Specification.md  ADR-0002-Technology-Baseline.md  ADR-0003-Authority-and-Networking.md  ADR-0004-Determinism-Scope.md  ADR-0005-Sparse-Set-ECS.md  ADR-0006-Catch2.md  ADR-0007-Dependencies.md  ADR-0008-Target-Topology.md  ADR-0009-Platform-Loop-and-Input.md  ADR-0010-Memory-Logging-and-Diagnostics.md  ADR-0011-ECS-Foundation-Contracts.md  README.md
tests/: CMakeLists.txt
tests/cmake/: verify_assertion_probe.cmake
tests/compile/: m2_invalid_release_assert.cpp
tests/determinism/: README.md
tests/integration/: dependency_smoke.cpp  m1_runtime_integration.cpp  m2_allocator_stress.cpp
tests/performance/: README.md  m2_allocator_benchmark.cpp  m3_ecs_benchmark.cpp
tests/support/: m2_assertion_probe.cpp  m3_component_type_identity_shared.hpp  m3_component_type_identity_tu.cpp
tests/unit/: bootstrap_tests.cpp  glfw_error_latch_tests.cpp  m1_runtime_tests.cpp  m2_assertion_tests.cpp  m2_logging_tests.cpp  m2_memory_tests.cpp  m2_metrics_tests.cpp  m3_ecs_allocation_tests.cpp  m3_ecs_contract_tests.cpp  m3_ecs_tests.cpp
